[metadata]
name = ServerUptime
version = 0.0.1a19
author = Kossam Adero Ouma
author_email = koss797@gmail.com
description = Server uptime monitoring tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iamksm/ServerUptime
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    pika>=1.3.2
    SQLAlchemy>=1.4.49,<2.0
    psycopg2-binary>=2.9.6
    ipython
    pytz
    click
python_requires = >=3.7

[options.entry_points]
console_scripts =
    start_beacon = server_uptime.cli:start_beacon
    start_watch_tower = server_uptime.cli:start_watch_tower
